# bettercode

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  project-words.txt  pyproject.toml
prompts/: refactor_monolithic_to_modular.md
scripts/: datalad_test.sh  git-sedi.sh
src/BetterCodeBetterScience/: LifeSnaps_example.ipynb  bug_driven_testing.py  data_management.ipynb  database.py  database_example_funcs.py  database_examples.ipynb  database_examples.py  distance.py  escape_velocity.py  formatting_example_ruff.py  language_model_api_prompting.ipynb  my_linear_regression.py  pubmed.py  simpleScaler.py  simple_testing.py  test_independence.py
src/BetterCodeBetterScience/distance_testing/: test_distance.py
src/BetterCodeBetterScience/docker-example/: Makefile  README.md  random_sentence.py
src/BetterCodeBetterScience/docker-example/container-output/: test_output.txt
src/BetterCodeBetterScience/narps/: bids_utils.py  image_utils.py  narps_megascript.py
src/BetterCodeBetterScience/rnaseq/: RUNNING_WORKFLOWS.md  immune_scrnaseq_1_dataprep.ipynb  immune_scrnaseq_2_preprocess.ipynb  immune_scrnaseq_monolithic.py
src/BetterCodeBetterScience/rnaseq/modular_workflow/: clustering.py  data_filtering.py  differential_expression.py  overrepresentation_analysis.py  pathway_analysis.py  predictive_modeling.py  pseudobulk.py  quality_control.py  run_workflow.py
src/BetterCodeBetterScience/rnaseq/prefect_workflow/: flows.py  run_workflow.py  tasks.py
src/BetterCodeBetterScience/rnaseq/prefect_workflow/config/: config.yaml
src/BetterCodeBetterScience/rnaseq/snakemake_workflow/: Makefile  Snakefile  WORKFLOW_OVERVIEW.md
src/BetterCodeBetterScience/rnaseq/snakemake_workflow/config/: config.yaml
src/BetterCodeBetterScience/rnaseq/snakemake_workflow/report/: clustering.rst  de_results.rst  doublet_umap.rst  filtering.rst  gsea.rst  hemoglobin.rst  pca.rst  prediction.rst  pseudobulk.rst  qc_violin.rst  umap.rst
src/BetterCodeBetterScience/rnaseq/snakemake_workflow/rules/: common.smk  per_cell_type.smk  preprocessing.smk  pseudobulk.smk
src/BetterCodeBetterScience/rnaseq/snakemake_workflow/scripts/: cluster.py  differential_expression.py  dimred.py  download.py  enrichr.py  filter.py  gsea.py  prediction.py  preprocess.py  pseudobulk.py  qc.py
src/BetterCodeBetterScience/rnaseq/stateless_workflow/: checkpoint.py  run_workflow.py
src/BetterCodeBetterScience/simple_workflow/: correlation.py  filter_data.py  join_data.py  load_data.py  visualization.py
src/BetterCodeBetterScience/simple_workflow/make_workflow/: Makefile
src/BetterCodeBetterScience/simple_workflow/make_workflow/scripts/: compute_correlation.py  download_data.py  filter_data.py  generate_heatmap.py  join_data.py
src/BetterCodeBetterScience/simple_workflow/prefect_workflow/: flows.py  run_workflow.py  tasks.py
src/BetterCodeBetterScience/simple_workflow/snakemake_workflow/: Makefile  Snakefile
src/BetterCodeBetterScience/simple_workflow/snakemake_workflow/config/: config.yaml
src/BetterCodeBetterScience/simple_workflow/snakemake_workflow/report/: heatmap.rst  workflow.rst
src/BetterCodeBetterScience/simple_workflow/snakemake_workflow/scripts/: compute_correlation.py  download_data.py  filter_data.py  generate_heatmap.py  join_data.py
src/BetterCodeBetterScience/textmining/: textmining.py
src/bettercode/: LifeSnaps_example.ipynb  bci_workflow_example.ipynb  check_links.py  constants.py  data_management.ipynb  database.py  database_example_funcs.py  database_examples.ipynb  database_examples.py  formatting_example.py  formatting_example_ai.py  incontext_learning_example.ipynb  language_model_api_prompting.ipynb  llm_utils.py  method_chaining_example.ipynb  modify_data.py  my_linear_regression.py
src/bettercode/distance_testing/: test_distance.py
src/bettercode/docker-example/: Dockerfile
src/bettercode/narps/: narps_megascript.py
src/bettercode/rnaseq/: RUNNING_WORKFLOWS.md  ad_scrnaseq_1_dataprep.ipynb  ad_scrnaseq_2_preprocess.ipynb  compression_timing_test.ipynb  immune_scrnaseq_1_dataprep.ipynb  immune_scrnaseq_1_dataprep.py  immune_scrnaseq_2_preprocess.ipynb  immune_scrnaseq_monolithic.py  pseudobulk.py
src/bettercode/rnaseq/modular_workflow/: data_loading.py  dimensionality_reduction.py  preprocessing.py  quality_control.py  run_workflow.py
src/bettercode/rnaseq/prefect_workflow/: flows.py  run_workflow.py  tasks.py
src/bettercode/rnaseq/prefect_workflow/config/: config.yaml
src/bettercode/rnaseq/snakemake_workflow/: Makefile  Snakefile
src/bettercode/rnaseq/snakemake_workflow/report/: enrichr.rst  qc_scatter.rst  workflow.rst
src/bettercode/rnaseq/snakemake_workflow/rules/: per_cell_type.smk  preprocessing.smk  pseudobulk.smk
src/bettercode/rnaseq/snakemake_workflow/scripts/: aggregate_results.py  cluster.py  differential_expression.py  dimred.py  download.py  enrichr.py  filter.py  gsea.py  prediction.py  preprocess.py  pseudobulk.py  (+1 more)
src/bettercode/rnaseq/stateless_workflow/: checkpoint.py  execution_log.py  run_workflow.py
src/bettercode/simple_workflow/: load_data.py
src/bettercode/simple_workflow/prefect_workflow/: flows.py  run_workflow.py  tasks.py
src/bettercode/simple_workflow/snakemake_workflow/: Makefile  Snakefile
src/bettercode/textmining/: textmining.py
tests/markers/: test_markers.py
tests/narps/: test_bids.py
tests/ordering/: test_duration.py  test_order.py
tests/parallel/: tests_parallel.py
tests/property_based_testing/: test_propertybased.py  test_propertybased_smoke.py
tests/textmining/: test_textmining.py
(+12 files in other folders)
